# gcp-experimentation

./: README.md
bq-to-arrow-stream/: pyproject.toml
bq-to-arrow-stream/src/: main.py
bq-to-parquet-exporter/: main.py  pyproject.toml
